@@ -1,3 +1,7 @@
+2004-08-05  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* VirtPackage.pm: (backport) fix XCode 1.5 cctools version detection
+
 2004-07-29  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* Bootstrap.pm: more modularization, to allow inject.pl in 10.3 
